# term4

./: README.md
comp_pract/: storage.py
comp_pract/decypher-task/: README.md
comp_pract/lr-17/: README.md  pyproject.toml
comp_pract/lr-5-comp-pract/: README.md  task_1_1.py  task_1_2.py  task_2_1.py  task_2_2.py
comp_pract/lr-webassembly-comp-pract/: README.md  index.html  index.js  index.wasm
comp_pract/lr_6/: requirements.txt
comp_pract/makeimage/: app.py
comp_pract/singleton-task/: main.py
comp_pract/storage-task/: README.md
data-science/lab-1/: lab1_data_science_intro.ipynb  lab1_vectors_matrices.ipynb
databases/lab-1/: README.md  new_data.sql
databases/lab-2/: README.md  firstModel.sql  task_2_script.sql
databases/lab-5/: README.md  task_5_nfbk.mwb  ЛР5.xlsx
databases/sr-2/: README.md
databases/sr-3/: README.md
prog-term-5/lab-1/: HTTPLoader.py  main.py
prog-term-5/lab-2/: README.md  gen_fib.py  main.py  test.py
prog-term-5/lab-3/: setup.py
prog-term-5/lab-5/: Dockerfile  README.md  api.py  glossary_pb2.py  glossary_pb2_grpc.py  grpc_server.py
prog-term-5/lab-observer/: README.md
prog/lab-1/: README.md
prog/lab-2/: README.md  binary_tree_task.py  complex_profiling.py  custom_exceptions.py  test_bin_tree_tests.py  timeit_comp.py
prog/lab-3/: README.md  custom_exceptions.py  decorator_task.py
prog/lab-4/: README.md  currency_rates.py
prog/lab-5/: README.md  config.py
prog/lab-6/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
prog/lab-7/: README.md
prog/lab_1/: binary_tree_task.py  (+1 more)
(+76 files in other folders)
